# lumen

./: .gitignore  LICENSE  README.md  bacon.toml  design.md  design_color_preview.css  package.json  vite.config.ts
src/: main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: database_commands.rs  image_import.rs  mod.rs
src-tauri/src/database/: media_repository.rs  migrations.rs  mod.rs
src-tauri/src/database/migrations/: 001_create_media_records.sql
src-tauri/src/models/: image.rs
src-tauri/src/utils/: image_processor.rs  mod.rs
src/api/: albumApi.ts  mediaApi.ts  tauriClient.ts
src/components/: ImportProgressDialog.tsx  Layout.tsx  MediaGrid.tsx  Sidebar.tsx  Toolbar.tsx
src/constants/: commands.ts  data.ts  events.ts  request.ts  windows.ts
src/hooks/: use-tauri-event.ts
src/routes/: __root.tsx  index.tsx  library.tsx  preview.tsx
src/stores/: mediaStore.ts
src/types/: components.ts  filters.ts  index.ts  models.ts  store.ts  tauri.ts  utils.ts
