[package]
name = "lumen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
uuid = { version = "1.10", features = ["v4", "v5", "serde", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.6"
image = "0.25"
rusqlite = { version = "0.28.0", features = ["bundled"] }
log = "^0.4"
tauri-plugin-log = "2"
